package Characters;

public class Animal extends Character {

    public Animal(){
        description = "Animal";
    }

    @Override
    public int getScore(){
        return 0;
    }
}
