package Characters;

public class Robot extends Character{

    public Robot(){
        description = "Robot";
    }

    @Override
    public int getScore(){
        return 0;
    }
}
