package Decorator;

public enum Subscription {
    FREE,
    PREMIUM,
    EXCLUSIVE
}
